--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/chenwuliang/js#readme",
   "dependencies": {
     "co": "^4.6.0",
+    "jest": "^27.2.0",
     "node-fetch": "^3.0.0"
   }
 }
