--- a/package.json
+++ b/package.json
@@ -16,6 +16,12 @@
     "type": "git",
     "url": "git+https://github.com/chenwuliang/undefined.git"
   },
+  "eslintConfig": {
+    "env": {
+      "browser": true,
+      "node": true
+    }
+  },
   "author": "leon",
   "license": "ISC",
   "bugs": {
@@ -26,8 +32,10 @@
     "co": "^4.6.0"
   },
   "devDependencies": {
-    "@babel/plugin-transform-runtime": "^7.15.0",
+    "@babel/cli": "^7.15.7",
+    "@babel/core": "^7.15.5",
     "@babel/preset-env": "^7.15.6",
+    "babel-loader": "^8.2.2",
     "cross-env": "^7.0.3",
     "eslint": "^7.32.0",
     "jest": "^27.1.0"
