--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   },
   "homepage": "https://github.com/chenwuliang/undefined#readme",
   "dependencies": {
-    "co": "^4.6.0"
+    "co": "^4.6.0",
+    "typescript": "^4.4.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.15.7",
@@ -39,5 +40,6 @@
     "cross-env": "^7.0.3",
     "eslint": "^7.32.0",
     "jest": "^27.1.0"
-  }
+  },
+  "type": "module"
 }
