--- a/跨域/node/package.json
+++ b/跨域/node/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "anywhere 8080",
-    "server": "nodemon server/csrf.js"
+    "serve": "nodemon server/csrf.js"
   },
   "keywords": [
     "csrf",
