--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "co": "^4.6.0",
     "express": "^4.17.1",
     "superagent": "^6.1.0",
-    "typescript": "^4.4.4"
+    "typescript": "^4.4.4",
+    "vue": "^2.6.14",
+    "vue-loader": "^15.9.8",
+    "vue-template-compiler": "^2.6.14"
   },
   "devDependencies": {
     "@babel/cli": "^7.15.7",
