--- a/package.json
+++ b/package.json
@@ -29,22 +29,24 @@
   },
   "homepage": "https://github.com/chenwuliang/undefined#readme",
   "dependencies": {
+    "@xes/s-cli": "0.0.7",
+    "@xes/x-cli": "^0.1.23",
     "cheerio": "^1.0.0-rc.10",
     "co": "^4.6.0",
-    "express": "^4.17.1",
+    "express": "^4.17.2",
     "superagent": "^6.1.0",
-    "typescript": "^4.4.4",
+    "typescript": "^4.5.4",
     "vue": "^2.6.14",
     "vue-loader": "^15.9.8",
     "vue-template-compiler": "^2.6.14"
   },
   "devDependencies": {
-    "@babel/cli": "^7.15.7",
-    "@babel/core": "^7.15.5",
-    "@babel/preset-env": "^7.15.6",
-    "babel-loader": "^8.2.2",
+    "@babel/cli": "^7.16.8",
+    "@babel/core": "^7.16.7",
+    "@babel/preset-env": "^7.16.8",
+    "babel-loader": "^8.2.3",
     "cross-env": "^7.0.3",
     "eslint": "^7.32.0",
-    "jest": "^27.1.0"
+    "jest": "^27.4.7"
   }
 }
