--- a/ssr/vue3-ssr/package.json
+++ b/ssr/vue3-ssr/package.json
@@ -6,12 +6,13 @@
     "build:client": "vue-cli-service build --dest dist/client",
     "build:server": "SSR=1 vue-cli-service build --dest dist/server",
     "build": "npm run build:client && npm run build:server",
-    "dev": "nodemon ./server.js NODE_ENV=dev",
-    "serve": "pm2 node ./server.js"
+    "dev": "cross-env NODE_ENV=development nodemon ./server.js ",
+    "serve": "pm2 start node ./server.js"
   },
   "dependencies": {
     "core-js": "^3.6.5",
     "express": "^4.17.2",
+    "util": "^0.12.4",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
@@ -25,15 +26,17 @@
     "@vue/compiler-sfc": "^3.0.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "babel-eslint": "^10.1.0",
+    "cross-env": "^7.0.3",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "nodemon": "^2.0.15",
+    "pm2": "^5.1.2",
+    "prettier": "^2.2.1",
     "webpack-manifest-plugin": "^4.1.1",
-    "webpack-node-externals": "^3.0.0",
-    "prettier": "^2.2.1"
+    "webpack-node-externals": "^3.0.0"
   },
   "eslintConfig": {
     "root": true,
